--- a/src/Services/IdentityService/Kira.IdentityService.API/appsettings.json
+++ b/src/Services/IdentityService/Kira.IdentityService.API/appsettings.json
@@ -18,6 +18,6 @@
   },
 
   "ConnectionStrings": {
-    "Identity": ""
+    "Identity": "Server=db;Database=master;User=sa;Password=S3cur3P@ssW0rd!;TrustServerCertificate=True"
   }
 }
