--- a/src/BuildingBlocks/Kira.Infrastructure.Shared/Kira.Infrastructure.Shared.csproj
+++ b/src/BuildingBlocks/Kira.Infrastructure.Shared/Kira.Infrastructure.Shared.csproj
@@ -9,10 +9,17 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.19.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Kira.Domain.Shared\Kira.Domain.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositories\MongoDb\" />
   </ItemGroup>
 
 </Project>
