--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
-  db:
-      environment:
-        SA_PASSWORD: "S3cur3P@ssW0rd!"
-        ACCEPT_EULA: "Y"
+  identitydb:
+    environment:
+      SA_PASSWORD: "S3cur3P@ssW0rd!"
+      ACCEPT_EULA: "Y"
