--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,11 @@ services:
       dockerfile: src/Services/IdentityService/Kira.IdentityService.API/Dockerfile
     ports:
       - "5086:80"
+    networks:
+      - gatewaynetwork
+      - identitynetwork
     depends_on:
-      - db
+      - identitydb
   kira.apigateway.ocelot:
     image: ${DOCKER_REGISTRY-}kiraapigatewayocelot
     build:
@@ -17,9 +20,20 @@ services:
       dockerfile: src/ApiGateways/Kira.ApiGateway.Ocelot/Dockerfile
     ports:
       - "5266:80"
+    networks:
+      - gatewaynetwork
+      - frontendnetwork
     depends_on:
-      - db
-  db:
-    image: "mcr.microsoft.com/mssql/server:2022-latest"
+      - kira.identityservice.api
+  identitydb:
+    image: "mcr.microsoft.com/mssql/server:2019-latest"
+    container_name: identitydb
     ports:
       - "1433:1433"
+    networks:
+      - identitynetwork
+  
+networks:
+  frontendnetwork:
+  gatewaynetwork:
+  identitynetwork:
