added db migrations to dockerfile

--- a/src/Services/IdentityService/Kira.IdentityService.API/Dockerfile
+++ b/src/Services/IdentityService/Kira.IdentityService.API/Dockerfile
@@ -6,6 +6,9 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
+RUN dotnet tool install --global dotnet-ef
+ENV PATH="/root/.dotnet/tools:${PATH}"
+
 COPY ["src/Services/IdentityService/Kira.IdentityService.API/Kira.IdentityService.API.csproj", "src/Services/IdentityService/Kira.IdentityService.API/"]
 COPY ["src/BuildingBlocks/Kira.Domain.Shared/Kira.Domain.Shared.csproj", "src/BuildingBlocks/Kira.Domain.Shared/"]
 COPY ["src/BuildingBlocks/Kira.Infrastructure.Shared/Kira.Infrastructure.Shared.csproj", "src/BuildingBlocks/Kira.Infrastructure.Shared/"]
@@ -14,10 +17,14 @@ COPY ["src/BuildingBlocks/Kira.Utils.Shared/Kira.Utils.Shared.csproj", "src/Buil
 RUN dotnet restore "src/Services/IdentityService/Kira.IdentityService.API/Kira.IdentityService.API.csproj"
 COPY . .
 WORKDIR "/src/src/Services/IdentityService/Kira.IdentityService.API"
+RUN dotnet ef migrations add InitialMigrations
+RUN dotnet ef database update
 RUN dotnet build "Kira.IdentityService.API.csproj" -c Release -o /app/build
 
+#RUN ./migrations.sh
+
 FROM build AS publish
-RUN dotnet publish "Kira.IdentityService.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Kira.IdentityService.API.csproj" -c Release -o /app/publish /p:UseAppHost=true
 
 FROM base AS final
 WORKDIR /app
