update jwt options

--- a/src/Services/IdentityService/Kira.IdentityService.API/appsettings.json
+++ b/src/Services/IdentityService/Kira.IdentityService.API/appsettings.json
@@ -9,12 +9,26 @@
   "AllowedHosts": "*",
 
   "JwtOptions": {
-    "SecretKey": "r!5mhgREWmdfkgm54^654yhfgf9!",
+    "SecretKey": "r!5mhgREWmdfkgm54^654yhfgf9!444324234fds2", // минимум 32 символа
     "ValidateIssuer": "true",
     "ValidateAudience": "true",
     "RequireExpirationTime": "true",
     "TokenExpirationTimeInMinutes": "10",
     "RefreshTokenExpirationTimeInHours": "720"
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Kira.Identity.API"
+    }
   },
 
   "ConnectionStrings": {
