--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     image: postgres
     container_name: identitydb
     restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -D IdentityDatabase"]
-      interval: 20s
-      timeout: 10s
-      retries: 5
+    #healthcheck:
+    #  test: ["CMD-SHELL", "pg_isready -U admin"]
+    #  interval: 20s
+    # timeout: 10s
+    # retries: 5
     ports:
         - "5432:5432"
   identityservice:
@@ -21,8 +21,8 @@ services:
     ports:
       - "5086:80"
     depends_on:
-      identitydb:
-        condition: service_healthy
+      - identitydb
+      #  condition: service_healthy
   apigateway:
     image: ${DOCKER_REGISTRY-}kiraapigatewayocelot
     container_name: apigateway
