--- a/src/Services/IdentityService/Kira.IdentityService.API/appsettings.json
+++ b/src/Services/IdentityService/Kira.IdentityService.API/appsettings.json
@@ -34,6 +34,6 @@
     }
   },
   "ConnectionStrings": {
-    "Identity": "Host=host.docker.internal;Port=5432;Database=IdentityDatabase;Username=admin;Password=Admin1234!"
+    "Identity": "Host=identitydb;Port=5432;Database=IdentityDatabase;Username=admin;Password=Admin1234!"
   }
 }
