--- a/src/BuildingBlocks/Kira.Utils.Shared/Kira.Utils.Shared.csproj
+++ b/src/BuildingBlocks/Kira.Utils.Shared/Kira.Utils.Shared.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Cookie\"/>
-    <Folder Include="Time\"/>
+    <Folder Include="Cookie\" />
+    <Folder Include="Time\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
