--- a/src/Services/FlightService/Kira.Flight.Application/Kira.Flight.Application.csproj
+++ b/src/Services/FlightService/Kira.Flight.Application/Kira.Flight.Application.csproj
@@ -7,22 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1"/>
-    <PackageReference Include="FluentValidation" Version="11.9.0"/>
-    <PackageReference Include="MediatR" Version="12.2.0"/>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\Kira.Application.Shared\Kira.Application.Shared.csproj"/>
-    <ProjectReference Include="..\..\..\BuildingBlocks\Light-Extensions\Light.Infrastructure.Extensions\Light.Infrastructure.Extensions.csproj"/>
-    <ProjectReference Include="..\Kira.Flight.Domain\Kira.Flight.Domain.csproj"/>
+    <ProjectReference Include="..\..\..\BuildingBlocks\Kira.Application.Shared\Kira.Application.Shared.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\Kira.Utils.Shared\Kira.Utils.Shared.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\Light-Extensions\Light.Infrastructure.Extensions\Light.Infrastructure.Extensions.csproj" />
+    <ProjectReference Include="..\Kira.Flight.Domain\Kira.Flight.Domain.csproj" />
+    <ProjectReference Include="..\Kira.Flight.Infrastructure.Interfaces\Kira.Flight.Infrastructure.Interfaces.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Airplanes\Commands\"/>
-    <Folder Include="Features\Airports\Commands\"/>
-    <Folder Include="Features\Seats\Commands\"/>
-    <Folder Include="Features\Seats\Queries\"/>
+    <Folder Include="Features\Airplanes\Commands\" />
+    <Folder Include="Features\Airports\Commands\" />
+    <Folder Include="Features\Flights\Dto\" />
+    <Folder Include="Features\Flights\Queries\" />
+    <Folder Include="Features\Seats\Commands\" />
+    <Folder Include="Features\Seats\Queries\" />
   </ItemGroup>
 
 </Project>
