--- a/src/Services/FlightService/Kira.Flight.API/appsettings.json
+++ b/src/Services/FlightService/Kira.Flight.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FlightWrite": "Host=flightdb;Port=5432;Database=FlightDatabase;Username=admin;Password=Admin1234!"
+    "FlightWrite": "Host=flightdb;Port=5432;Database=FlightDatabase;Username=admin;Password=Admin1234!",
+    "Redis": "Server=redis:6379,abortConnect=False"
   }
 }
