--- a/src/Services/FlightService/Kira.Flight.Extensions/Kira.Flight.Extensions.csproj
+++ b/src/Services/FlightService/Kira.Flight.Extensions/Kira.Flight.Extensions.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.9.0"/>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0"/>
-    <PackageReference Include="MediatR" Version="12.2.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,16 +19,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0"/>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\Light-Extensions\Light.Infrastructure.EfCore.SqlServer\Light.Infrastructure.EfCore.csproj"/>
-    <ProjectReference Include="..\Kira.Flight.Application\Kira.Flight.Application.csproj"/>
-    <ProjectReference Include="..\Kira.Flight.Infrastructure\Kira.Flight.Infrastructure.csproj"/>
+    <ProjectReference Include="..\..\..\BuildingBlocks\Light-Extensions\Light.Infrastructure.EfCore.SqlServer\Light.Infrastructure.EfCore.csproj" />
+    <ProjectReference Include="..\Kira.Flight.Application\Kira.Flight.Application.csproj" />
+    <ProjectReference Include="..\Kira.Flight.Infrastructure\Kira.Flight.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
