--- a/.editorconfig
+++ b/.editorconfig
@@ -22,7 +22,7 @@ csharp_style_prefer_utf8_string_literals = true:suggestion
 csharp_style_var_elsewhere = true:suggestion
 csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
-dotnet_separate_import_directive_groups = true
+dotnet_separate_import_directive_groups = false
 dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:none
 dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:none
 dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
@@ -37,6 +37,7 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggest
 # ReSharper properties
 resharper_blank_lines_after_control_transfer_statements = 1
 resharper_blank_lines_after_multiline_statements = 1
+resharper_blank_lines_after_start_comment = 0
 resharper_blank_lines_before_block_statements = 1
 resharper_blank_lines_before_control_transfer_statements = 1
 resharper_blank_lines_before_multiline_statements = 1
@@ -57,14 +58,21 @@ resharper_indent_nested_for_stmt = true
 resharper_indent_nested_lock_stmt = true
 resharper_indent_nested_while_stmt = true
 resharper_indent_preprocessor_region = no_indent
+resharper_indent_primary_constructor_decl_pars = inside
 resharper_keep_existing_declaration_parens_arrangement = false
 resharper_keep_existing_embedded_arrangement = false
 resharper_keep_existing_expr_member_arrangement = false
 resharper_keep_existing_initializer_arrangement = false
+resharper_keep_existing_invocation_parens_arrangement = false
 resharper_keep_existing_linebreaks = false
+resharper_keep_existing_primary_constructor_declaration_parens_arrangement = false
 resharper_keep_existing_switch_expression_arrangement = false
+resharper_max_array_initializer_elements_on_line = 30
 resharper_max_enum_members_on_line = 0
-resharper_max_initializer_elements_on_line = 2
+resharper_max_formal_parameters_on_line = 6
+resharper_max_initializer_elements_on_line = 1
+resharper_max_primary_constructor_parameters_on_line = 6
+resharper_new_line_before_while = true
 resharper_place_accessorholder_attribute_on_same_line = false
 resharper_place_accessor_attribute_on_same_line = false
 resharper_place_field_attribute_on_same_line = false
@@ -72,6 +80,7 @@ resharper_place_simple_accessor_on_single_line = false
 resharper_place_simple_enum_on_single_line = true
 resharper_wrap_array_initializer_style = chop_if_long
 resharper_wrap_before_declaration_rpar = true
+resharper_wrap_before_primary_constructor_declaration_lpar = false
 resharper_wrap_chained_binary_expressions = chop_if_long
 resharper_wrap_chained_binary_patterns = chop_if_long
 resharper_wrap_chained_method_calls = chop_if_long
